[package]
name = "bevy_freecam"
version = "0.0.1"
edition = "2021"
repository = "https://github.com/BenjaminBrienen/bevy_freecam"
homepage = "https://github.com/BenjaminBrienen/bevy_freecam"
rust-version = "1.82.0"
authors = ["Benjamin Brienen"]
keywords = ["bevy"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/bevy_freecam"

[dependencies]
glam = "0.29"
# bevy = "0.15.0-rc.3"

[lib]
